Fix geode-rebalancer split packages

--- a/geode-docs/developing/partitioned_regions/automated_rebalance.html.md.erb
+++ b/geode-docs/developing/partitioned_regions/automated_rebalance.html.md.erb
@@ -39,7 +39,7 @@ in the `<initializer>` attribute within the `<cache>` configuration
 of the `cache.xml` file:
 
 ``` pre
-<class-name> org.apache.geode.cache.util.AutoBalancer </class-name>
+<class-name> org.apache.geode.rebalancer.AutoBalancer </class-name>
 ```
 
 The time schedule that triggers an evaluation and possible rebalance
