Removes deprecated and broken async sender.

--- a/geode-docs/tools_modules/gfsh/command-pages/create.html.md.erb
+++ b/geode-docs/tools_modules/gfsh/command-pages/create.html.md.erb
@@ -851,7 +851,7 @@ for syntax details.
     [--region-idle-time-expiration-action=value]
     [--region-time-to-live-expiration=value]
     [--region-time-to-live-expiration-action=value] [--disk-store=value]
-    [--enable-synchronous-disk=value] [--enable-async-conflation=value]
+    [--enable-synchronous-disk=value]
     [--enable-subscription-conflation=value] [--cache-listener=value(,value)*]
     [--cache-loader=value] [--cache-writer=value]
     [--async-event-queue-id=value(,value)*]
